added update and delete employee api, also added api to retrieve employee details based on id

--- a/employee_portal/employee/templates/employee/employee_details.html
+++ b/employee_portal/employee/templates/employee/employee_details.html
@@ -2,7 +2,10 @@
 
 {% for emp in employees %}
 	<div>
-		<p>{{emp}}</p>
+		<a href="{% url 'employee_data' emp.id %}">{{emp}}</a>
+		<a href="{% url 'update_emp' emp.id %}">edit</a>
+		<a href="{% url 'delete' emp.id %}">delete</a>
+		<!-- <p>{{emp}}</p> -->
 		<hr/>
 	</div>
 {% endfor %}
