added search by name api

--- a/employee_portal/employee/templates/employee/employee_details.html
+++ b/employee_portal/employee/templates/employee/employee_details.html
@@ -1,5 +1,12 @@
 <h3>Employee Details</h3>
 
+<form method = "POST" action="/search_results">
+	{% csrf_token %}
+	<p>Search Employee: {{form.name}}
+	<input type="submit" name="Search Name">
+	</p>
+</form>
+
 <table border="3">
 
 	<tr>
