--- a/employee_portal/employee/templates/employee/employee_details.html
+++ b/employee_portal/employee/templates/employee/employee_details.html
@@ -1,32 +1,87 @@
-<h3>Employee Details</h3>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<style>
+
+	body{
+		background-color: #638CB8;
+	}
+
+	input{
+		width: 100%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+	}
+
+	input::placeholder {
+	  color: #d3d3d3;
+	}
+
+	.submit{
+		background-color: #6BA3E8;
+	}
+
+	.center-column{
+		width:600px;
+		margin: 20px auto;
+		padding:20px;
+		background-color: #fff;
+		border-radius: 3px;
+		box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
+	}
+
+	.item-row{
+		background-color: #906abd;
+		margin: 10px;
+		padding: 20px;
+		border-radius: 3px;
+		color: #fff;
+		font-size: 16px;
+		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+	}
+
+	.btn-danger{
+		background-color: #ffae19;
+		border-color: #e59400;
+	}
+
+</style>
+
+<div class="center-column">
 
 <form method = "POST" action="/search_results">
 	{% csrf_token %}
-	<p>Search Employee: {{form.name}}
-	<input type="submit" name="Search Name">
-	</p>
+	Search Employee: {{form.name}}
+	<input class="btn btn-info btn-danger" type="submit" name="Search Name">
+	
 </form>
 
 <table border="3">
 
 	<tr>
-		<td><a href="{% url 'order_by' 'name' %}">Name</a></td>
-		<td><a href="{% url 'order_by' 'joining_date' %}">Joining Date</a></td>
-		<td><a href="{% url 'order_by' 'last_date' %}">Last Date</a></td>
-		<td>Edit</td>
-		<td>Delete</td>
+		<td><a href="{% url 'order_by' 'name' %}"><b>Name</b></a></td>
+		<td><a href="{% url 'order_by' 'joining_date' %}"><b>Joining Date</b></a></td>
+		<td><a href="{% url 'order_by' 'last_date' %}"><b>Last Date</b></a></td>
+		<td><b>Edit</b></td>
+		<td><b>Delete</b></td>
 	</tr>
 
 {% for emp in employees %}
 	<tr>
+
 		<td><a href="{% url 'employee_data' emp.id %}">{{emp}}</a></td>
 		<td>{{emp.joining_date}}</a></td>
 		<td>{{emp.last_date}}</a></td>
-		<td><a href="{% url 'update_emp' emp.id %}">edit</a></td>
-		<td><a href="{% url 'delete' emp.id %}">delete</a></td>
+		<td><a class="btn-sm btn-info btn-danger" href="{% url 'update_emp' emp.id %}">edit</a></td>
+		<td><a class="btn-sm btn-info btn-danger" href="{% url 'delete' emp.id %}">delete</a></td>
+
 	</tr>
 {% endfor %}
+
 </table>
 
+<br></br>
 
-<a href="{% url 'enroll' %}">Enroll a new employee</a>
+<a class="btn btn-info btn-danger" href="{% url 'enroll' %}">Enroll a new employee</a>
+
+</div>
