fix form action for enroll employee

--- a/employee_portal/employee/templates/employee/enroll_employee.html
+++ b/employee_portal/employee/templates/employee/enroll_employee.html
@@ -13,7 +13,7 @@
 
 <div class = "center-column">
 
-<form method="POST" action="/">
+<form method="POST" action="/enroll/employee">
 	{% csrf_token %}
 
 	<p>Name: {{form.name}}</p>
