Fixed syntax error

--- a/employee_portal/employee/templates/employee/employee.html
+++ b/employee_portal/employee/templates/employee/employee.html
@@ -14,13 +14,11 @@
 <div class = "center-column">
 <h2>Employee Data</h2>
 
-
-
 <p>Name: {{emp}}</p>
 <p>ID: {{emp.id}}</p>
 <p>Location: {{emp.location}}</p>
 <p>Phone Number: {{emp.phone_number}}</p>
-<p>Email id: {emp.email_id}}</p>
+<p>Email id: {{emp.email_id}}</p>
 <p>Joining date:{{emp.joining_date}}</p>
 <p>Last date: {{emp.last_date}}</p>
 
