Fixed redirect from home page to employee details page

--- a/employee_portal/employee/templates/employee/update_employee_details.html
+++ b/employee_portal/employee/templates/employee/update_employee_details.html
@@ -15,7 +15,7 @@
 
 <div class = "center-column">
 
-<form method="POST" action="/enroll_employee">
+<form method="POST" action="">
 	{% csrf_token %}
 
 	<p>Name: {{form.name}}</p>
