--- a/employee_portal/employee/templates/employee/delete.html
+++ b/employee_portal/employee/templates/employee/delete.html
@@ -1,8 +1,72 @@
-<p>Are you sure you want to delete "{{item}}"</p>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<a href="{% url 'list' %}">Cancel</a>
+<style>
+
+	body{
+		background-color: #638CB8;
+	}
+
+	input{
+		width: 15%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+	}
+
+	input::placeholder {
+	  color: #d3d3d3;
+	}
+
+	.submit{
+		background-color: #6BA3E8;
+	}
+
+	.center-column{
+		width:600px;
+		margin: 20px auto;
+		padding:20px;
+		background-color: #fff;
+		border-radius: 3px;
+		box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
+	}
+
+	.item-row{
+		background-color: #906abd;
+		margin: 10px;
+		padding: 20px;
+		border-radius: 3px;
+		color: #fff;
+		font-size: 16px;
+		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+	}
+
+	.btn-danger{
+		background-color: #ffae19;
+		border-color: #e59400;
+	}
+
+	.table{
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		width: auto;
+	}
+
+	.inner-table{
+		border: 3;
+		border-width: 1;
+	}
+
+</style>
+<div class="center-column">
+<p>Are you sure you want to delete "{{item}}" ?</p>
 
 <form method="POST" action="">
 	{% csrf_token %}
-	<input type="submit" name="Confirm">
+
+	<input class="btn btn-info btn-danger" type="submit" name="Confirm">
+	<a class="btn btn-info btn-danger" href="{% url 'list' %}">Cancel</a>
+
 </form>
+
+</div>
