removed sorting feature from search_results.html

--- a/employee_portal/employee/templates/employee/search_results.html
+++ b/employee_portal/employee/templates/employee/search_results.html
@@ -64,9 +64,9 @@
 <table border="3">
 
 	<tr class="inner-table">
-		<td><a href="{% url 'order_by' 'name' %}"><b>Name</b></a></td>
-		<td><a href="{% url 'order_by' 'joining_date' %}"><b>Joining Date</b></a></td>
-		<td><a href="{% url 'order_by' 'last_date' %}"><b>Last Date</b></a></td>
+		<td><b>Name</b></a></td>
+		<td><b>Joining Date</b></a></td>
+		<td><b>Last Date</b></a></td>
 		<td><b>Edit</b></td>
 		<td><b>Delete</b></td>
 	</tr>
