--- a/employee_portal/employee/templates/employee/update_employee_details.html
+++ b/employee_portal/employee/templates/employee/update_employee_details.html
@@ -1,6 +1,26 @@
-<h3>Update Details</h3>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <style>
+
+	body{
+		background-color: #638CB8;
+	}
+
+	input{
+		width: 70%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+
+	}
+
+	input::placeholder {
+	  color: #d3d3d3;
+	}
+
+	.submit{
+		background-color: #6BA3E8;
+	}
 
 	.center-column{
 		width:600px;
@@ -11,9 +31,33 @@
 		box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
 	}
 
+	.item-row{
+		background-color: #906abd;
+		margin: 10px;
+		padding: 20px;
+		border-radius: 3px;
+		color: #fff;
+		font-size: 16px;
+		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+	}
+
+	.btn-danger{
+		background-color: #ffae19;
+		border-color: #e59400;
+	}
+
+	.table{
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		width: auto;
+	}
+
 </style>
 
 <div class = "center-column">
+
+<h3>Update Details</h3>
 
 <form method="POST" action="">
 	{% csrf_token %}
@@ -25,7 +69,7 @@
 	<p>Joining date:{{form.joining_date}}</p>
 	<p>Last date: {{form.last_date}}</p>
 	
-	<input type="submit" name="update employee details">
+	<input class="btn btn-info btn-danger" type="submit" name="update employee details">
 </form>
 
 </div>
