--- a/employee_portal/employee/templates/employee/employee.html
+++ b/employee_portal/employee/templates/employee/employee.html
@@ -1,4 +1,25 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 <style>
+
+	body{
+		background-color: #638CB8;
+	}
+
+	input{
+		width: 100%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+	}
+
+	input::placeholder {
+	  color: #d3d3d3;
+	}
+
+	.submit{
+		background-color: #6BA3E8;
+	}
 
 	.center-column{
 		width:600px;
@@ -9,11 +30,25 @@
 		box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
 	}
 
+	.item-row{
+		background-color: #906abd;
+		margin: 10px;
+		padding: 20px;
+		border-radius: 3px;
+		color: #fff;
+		font-size: 16px;
+		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
+	}
+
+	.btn-danger{
+		background-color: #ffae19;
+		border-color: #e59400;
+	}
+
 </style>
 
 <div class = "center-column">
-<h2>Employee Data</h2>
-
+<h3>Employee Data</h3>
 <p>Name: {{emp}}</p>
 <p>ID: {{emp.id}}</p>
 <p>Location: {{emp.location}}</p>
@@ -22,8 +57,7 @@
 <p>Joining date: {{emp.joining_date}}</p>
 <p>Last date: {{emp.last_date}}</p>
 
-
-<a href="{% url 'list' %}">Back</a>
+<a class="btn btn-info btn-danger" href="{% url 'list' %}">Back</a>
 
 </div>
 
