--- a/employee_portal/employee/templates/employee/enroll_employee.html
+++ b/employee_portal/employee/templates/employee/enroll_employee.html
@@ -46,16 +46,17 @@
 		border-color: #e59400;
 	}
 
-	.table{
-		display: flex;
-		justify-content: center;
-		align-content: center;
-		width: auto;
-	}
-
 </style>
 
 <div class = "center-column">
+
+{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <p> {{ error }} </p>
+        {% endfor %}
+    {% endfor %}
+{% endif %}
 
 <form method="POST" action="/enroll/employee">
 	{% csrf_token %}
